# docs/swagger.json
@@ -18,6 +18,9 @@
     "paths": {
         "/v1/api/user": {
             "get": {
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -27,7 +30,13 @@
                 "summary": "获取用户列表信息",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "用户列表响应信息,会展示用户数量",
+                        "schema": {
+                            "$ref": "#/definitions/usernamespace.UserListResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器处理失败",
                         "schema": {
                             "type": "string"
                         }
@@ -47,7 +56,7 @@
                 "summary": "创建新用户",
                 "parameters": [
                     {
-                        "description": "用户名",
+                        "description": "用户名信息",
                         "name": "name",
                         "in": "body",
                         "required": true,
@@ -58,9 +67,152 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "{\"Name\":\"1234\",\"ID\":1}",
+                        "description": "用户信息",
                         "schema": {
                             "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "请求数据不符合要求",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器处理失败",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/api/user/{uid}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "获取用户列表信息",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "请求数据不符合要求",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "未找到指定资源",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "更新指定用户信息",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "请求数据不符合要求",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "未找到指定资源",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器处理失败",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "删除指定用户",
+                "parameters": [
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    },
+                    "400": {
+                        "description": "请求数据不符合要求",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "未找到指定资源",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器处理失败",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -70,6 +222,9 @@
     "definitions": {
         "user.User": {
             "type": "object",
+            "required": [
+                "ID"
+            ],
             "properties": {
                 "ID": {
                     "type": "integer"
@@ -79,11 +234,42 @@
                 }
             }
         },
+        "usernamespace.LinkResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "method": {
+                    "type": "string"
+                },
+                "uri": {
+                    "type": "string"
+                }
+            }
+        },
         "usernamespace.UserCreateQuery": {
             "type": "object",
             "properties": {
                 "Name": {
                     "type": "string"
+                }
+            }
+        },
+        "usernamespace.UserListResponse": {
+            "type": "object",
+            "properties": {
+                "Description": {
+                    "type": "string"
+                },
+                "Links": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/usernamespace.LinkResponse"
+                    }
+                },
+                "UserCount": {
+                    "type": "integer"
                 }
             }
         }
